Update E Card HTML.html

--- a/E Card HTML.html
+++ b/E Card HTML.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="imgbox">
-    <img class="center-fit" src='https://github.com/sahmedstackteck/stackteck-xmas-e-card/blob/master/Christmas%20E%20Card%20Final.gif'>
+    <img class="center-fit" src='https://github.com/sahmedstackteck/stackteck-xmas-e-card/blob/master/Christmas%20E%20Card%20Final.gif?raw=true'>
 </div>
 </body>
 </html>
